Closed
Bug 256436
Opened 21 years ago
Closed 21 years ago
Browser gets confused about page and box height/position (dropdown menu/html select affected)
Categories
(Core :: Layout, defect, P1)
Core
Layout
Tracking
()
VERIFIED
FIXED
mozilla1.8alpha4
People
(Reporter: anfo, Assigned: roc)
References
Details
(Keywords: regression)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de-AT; rv:1.8a3) Gecko/20040821
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; de-AT; rv:1.8a3) Gecko/20040821
When you move to a homepage for the first time since last start and you
would like to follow a link by clicking on it, then, if this link is positioned
where you have to scroll down, the link jumps to the bottom of the browser's
window, but doesn't follow.
Reproducible: Always
Steps to Reproduce:
1. Open a Homepage where you have not been since last start of Mozilla
2. Scroll down
3. Click on a link
Actual Results:
Before clicking, the link was in the middle of the window, after clicking
it jumped to the bottom of the window but didn't follow.
Expected Results:
Follow the link
Comment 1•21 years ago
|
||
Can you provide either an url or a reduced testcase of what you're explaining?
I'm not sure I understand what you're saying.
> the link jumps to the bottom of the browser's window, but doesn't follow.
But that might be a link to an anchor, a link to an intra-document location.
Help/Help Contents/Contents tab/Creating Web Pages/Creating Links/ Within the
Same Page
will show you how it's been done.
I see the same problem in today's (20040821) Linux build. Middle clicking on a
link to a different website (not an anchor) results in a scroll action in the
open tab and no new tab, as would otherwise be expected. Clicking on the link
again will open the new tab. I've also noticed that the link not only jumps to
the bottom of the window but I cannot scroll down to anything below the link.
I've also seen similar weirdness in the composer today. It's sufficiently
annoying that I'm reverting to an earlier nightly for today at least.
Comment 3•21 years ago
|
||
Confirming. I can reproduce this on linux, using a CVS build from this morning
(2004082107). It seems as though the browser is getting confused about the
height of the page and what part of it is visible. Here's another set of
instructions to reproduce it.
1) Load a page which is much longer than will fit in the browser window, e.g.
<http://tinderbox.mozilla.org/showbuilds.cgi?tree=SeaMonkey> or
<http://slashdot.org/>.
2) Scroll to the bottom of the page and click on a visible link.
Expected: Browser follows the link.
Actual: The browser window redraws with the link you clicked on at the bottom of
the frame. The vertical scrollbar may disappear or reposition itself to the
bottom of its gutter.
At this point, you can scroll the page with the keyboard but the scrollbar only
allows scrolling within part of the page. If you click on the link a second
time, mozilla will act on it as expected.
Mozilla's behavior regarding the link is similar to its traditional behavior
with links that are only partly visible: The first click scrolls the page so the
link is fully visible; then a second click will activate the link.
Tentatively assigning this to layout. I'm suspicious this might be related to
the checkin for bug 255584.
Assignee: general → nobody
Status: UNCONFIRMED → NEW
Component: Browser-General → Layout
Ever confirmed: true
OS: Windows XP → All
QA Contact: general → core.layout
Hardware: PC → All
Summary: After entering a new page clicking on a link, the browser scrolls → Browser gets confused about page height/position
Comment 4•21 years ago
|
||
I locally backed out the patch from bug 255584, rebuilt layout, and tested
again. I can no longer reproduce this bug.
Keywords: regression
Comment 5•21 years ago
|
||
Perhaps, we just have to consolidate bug 256465 and this. Both are caused by the
fix for bug 255584.
Assignee: nobody → roc
Comment 6•21 years ago
|
||
*** Bug 256465 has been marked as a duplicate of this bug. ***
Comment 7•21 years ago
|
||
This should be a blocker.
A good test case is right here :-). Try to change the target milestone, you can
choose from only a subset of options. If you move up the scrollbar, the list of
options changes and get truncated.
Severity: normal → blocker
Priority: -- → P1
Target Milestone: --- → mozilla1.8alpha4
Updated•21 years ago
|
Summary: Browser gets confused about page height/position → Browser gets confused about page and box height/position (dropdown menu/html select affected)
| Assignee | ||
Comment 8•21 years ago
|
||
If you just back out the changes to layout/html/base/src/nsGfxScrollFrame.cpp,
does the bug go away?
| Assignee | ||
Comment 9•21 years ago
|
||
IF so, then r+sr to check that in...
Comment 10•21 years ago
|
||
I just backed out the change in layout/html/base/src/nsGfxScrollFrame.cpp and
rebuilt layout. It's almost fixed, but not entirely. In the dropdown menu for
'Target milestone' in bugzilla, the first two options 'M1' and 'M2' are not shown.
(With the change in the other file backed out as well, I could select M1 and M2,
too.). Besides, what's described in bug 255584 comment #0 came back.
Comment 11•21 years ago
|
||
*** Bug 256489 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•21 years ago
|
||
Alright then, can someone please back out the whole thing on the trunk?
Comment 13•21 years ago
|
||
Backed out the patch from bug 255584, per comment 12:
Checking in html/base/src/nsGfxScrollFrame.cpp;
/cvsroot/mozilla/layout/html/base/src/nsGfxScrollFrame.cpp,v <--
nsGfxScrollFrame.cpp
new revision: 3.166; previous revision: 3.165
done
Checking in xul/base/src/nsBoxToBlockAdaptor.cpp;
/cvsroot/mozilla/layout/xul/base/src/nsBoxToBlockAdaptor.cpp,v <--
nsBoxToBlockAdaptor.cpp
new revision: 1.62; previous revision: 1.61
done
Resolving this bug FIXED.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 14•21 years ago
|
||
Thanks!!! It's been a busy weekend :-|
Comment 15•21 years ago
|
||
*** Bug 256559 has been marked as a duplicate of this bug. ***
*** Bug 256557 has been marked as a duplicate of this bug. ***
Comment 17•21 years ago
|
||
*** Bug 256565 has been marked as a duplicate of this bug. ***
Comment 18•21 years ago
|
||
*** Bug 256590 has been marked as a duplicate of this bug. ***
Comment 19•21 years ago
|
||
*** Bug 256639 has been marked as a duplicate of this bug. ***
Comment 20•21 years ago
|
||
*** Bug 256667 has been marked as a duplicate of this bug. ***
Verified FIXED in build 2004-08-23-08 on Windows XP, Seamonkey trunk.
Regression gone.
Status: RESOLVED → VERIFIED
Comment 22•21 years ago
|
||
Is the offending change fully backed out? I still see problems in UI described
in bug 256489 Comment #1 ( right click in status bar won't open proxy
selection/setup dialog )
| Assignee | ||
Comment 23•21 years ago
|
||
Yes, it is.
| Assignee | ||
Comment 24•21 years ago
|
||
Jungshik, I tried just the nsBoxToBlockAdapter patch, and it seems to work for
me. All elements are selectable in scrolling dropdowns. And the testcase
described in comment http://bugzilla.mozilla.org/show_bug.cgi?id=255584#c7
works. As do the other testcase in that bug. I think you must have made a
mistake in your tree somehow.
You need to log in
before you can comment on or make changes to this bug.
Description
•