Bug 256436 - Backing out the patch from bug 255584 due to a regression. Requested by roc.