layout/generic/nsGfxScrollFrame.cpp
@@ -2132,14 +2132,11 @@ nsGfxScrollFrameInner::GetScrolledSize(nsPresContext* aPresContext,
   mScrollAreaBox->GetChildBox(&child);
   nsIFrame* frame;
   child->GetFrame(&frame);
-
   nsIView* view = frame->GetView();
   NS_ASSERTION(view,"Scrolled frame must have a view!!!");
   
   nsRect rect = view->GetBounds();
-  // forget about the stuff above or to the left of the origin, since
-  // we can't currently scroll there anyway.
-  nsSize size(rect.XMost(), rect.YMost());
+  nsSize size(rect.width, rect.height);
  
   nsBox::AddMargin(child, size);
   nsBox::AddBorderAndPadding(mScrollAreaBox, size);
